--- a/app/src/main/res/layout/activity_restaurant_detail.xml
+++ b/app/src/main/res/layout/activity_restaurant_detail.xml
@@ -47,7 +47,6 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:id="@+id/address"
-            android:layout_marginTop="3dp"
             android:textColor="@color/dark_grey"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
             app:layout_constraintStart_toEndOf="@+id/locationIcon" android:layout_marginStart="8dp"
@@ -79,7 +78,7 @@
             android:textAllCaps="true"
             android:textStyle="bold"
             android:backgroundTint="@color/grey"
-            android:background="@drawable/round_shape_blue"
+            android:background="@drawable/round_shape_custom"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
             app:layout_constraintTop_toBottomOf="@+id/cuisines" android:layout_marginTop="8dp"/>
     <TextView
@@ -116,4 +115,14 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"/>
     </android.support.constraint.ConstraintLayout>
+    <Button
+            android:text="Open in zomato"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/zomatoLink"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="16dp" android:background="@drawable/round_shape_custom"
+            android:textColor="#FFFFFF" android:paddingLeft="10dp" android:paddingRight="10dp"
+            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/address"/>
 </android.support.constraint.ConstraintLayout>
