--- a/app/src/main/res/layout/activity_restaurant_detail.xml
+++ b/app/src/main/res/layout/activity_restaurant_detail.xml
@@ -12,6 +12,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_margin="16dp"
+            android:transitionName="thumb"
             android:scaleType="fitCenter"/>
 
     <View
@@ -26,6 +27,7 @@
             android:layout_height="wrap_content"
             android:textStyle="bold"
             android:textColor="@color/black"
+            android:transitionName="name"
             android:id="@+id/name" android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@+id/divider" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="16dp" android:textSize="18sp"/>
@@ -38,6 +40,7 @@
             android:max="5"
             android:numStars="5"
             android:rating="4"
+            android:transitionName="rating"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="16dp"
             app:layout_constraintTop_toTopOf="@+id/name"
@@ -48,6 +51,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/address"
             android:textColor="@color/dark_grey"
+            android:transitionName="address"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
             app:layout_constraintStart_toEndOf="@+id/locationIcon" android:layout_marginStart="8dp"
             app:layout_constraintTop_toTopOf="@+id/locationIcon"
@@ -57,6 +61,7 @@
             android:layout_height="25dp"
             android:id="@+id/locationIcon"
             android:src="@drawable/location"
+            android:transitionName="locIcon"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="16dp" android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/textView2"/>
@@ -64,6 +69,7 @@
             android:text="Rajasthani"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:transitionName="cuisines"
             android:textColor="@color/cuisines_txt_color"
             android:id="@+id/cuisines" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
@@ -87,6 +93,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/avgCostForTwo"
             android:textColor="@color/dark_grey"
+            android:transitionName="avgCostVal"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
             app:layout_constraintStart_toEndOf="@+id/textView2" android:layout_marginStart="8dp"
             app:layout_constraintTop_toTopOf="@+id/textView2" app:layout_constraintBottom_toBottomOf="@+id/textView2"/>
@@ -95,16 +102,23 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/dark_grey"
-            android:id="@+id/textView2" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/deliveryInfo"/>
+            android:transitionName="avgCostTitle"
+            android:id="@+id/textView2"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/deliveryInfo"/>
+
     <android.support.constraint.ConstraintLayout
             android:layout_width="0dp"
             android:layout_height="0dp"
-            tools:visibility="gone"
+            android:visibility="gone"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/image" android:background="#fff" android:id="@+id/emptyLayout">
+            app:layout_constraintTop_toTopOf="@+id/image"
+            android:background="#fff"
+            android:id="@+id/emptyLayout">
 
         <ProgressBar
                 style="?android:attr/progressBarStyle"
